# yamlfixer

./: .bumpversion.cfg  .pre-commit-hooks.yaml  .yamllint  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  TODO.md  just-a-test  setup.cfg  setup.py  snapcraft.yaml  yamlfixer
.github/: dependabot.yml  feature_request.yaml
.github/ISSUE_TEMPLATE/: -feature-request.md  ask-for-command-line-script---.md  bug_report.md  minimalist-issue.md
.github/workflows/: checks.yml  codeql-analysis.yml  publish_docker_hub.yml  publish_gh.yml  publish_pypi.yml  testing.yml
examples/: bad.yml  fakeansibleplaybook.yml  fakeansiblevault.yml  good.yml  withtabs.yml
tests/: __init__.py  test_commandline.py  test_listfixers.py
yamlfixer/: __init__.py  __main__.py  common.py  constants.py  filefixer.py  problemfixer.py  yamlfixer.py
