[flake8]
import-order-style = pep8
max-line-length = 120
ignore = T101, W503, AAA01

[pylint.FORMAT]
max-line-length = 120

[pylint.MESSAGES CONTROL]
disable = fixme

[metadata]
version = 0.9.2
name = yamlfixer-opt-nc
description = automates the fixing of problems reported by yamllint
long_description = file: README.md
author = "OPT-NC"
author_email = "jerome.alet@opt.nc"
license = "GPLv3+"
license_file = LICENSE
long_description_content_type = text/markdown
url = https://github.com/opt-nc/yamlfixer
project_urls =
    Bug Tracker = https://github.com/opt-nc/yamlfixer/issues
    GitHub Releases = https://github.com/opt-nc/yamlfixer/releases
    Files = https://pypi.org/project/yamlfixer-opt-nc/#files
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Utilities
    Topic :: Text Processing
    Development Status :: 5 - Production/Stable
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Natural Language :: English

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
  yamllint >= 1.26.3
  setuptools

[options.package_data]
yamlfixer = examples/*.yaml examples/*.yml

[options.entry_points]
console_scripts =
  yamlfixer = yamlfixer.__main__:run
